<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="#F4FAF9">

    <!-- Toolbar -->
<!--    <include layout="@layout/toolbar_layout" />-->


    <!-- Option Label -->
    <TextView
        android:id="@+id/tv_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_gravity="center" />

    <!-- Grid Layout for Buttons -->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="375dp"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:padding="16dp"
        android:rowOrderPreserved="false"
        android:layout_marginTop="150dp">

        <!-- Button: Measurement -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_measurement"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measurement"
                    android:textSize="14sp"
                    android:textColor="#0F336F"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Button: Messages -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_messages"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/messages"
                    android:textSize="14sp"
                    android:textColor="#0F336F"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Button: TeleMed -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_telemed"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telemed"
                    android:textSize="14sp"
                    android:textColor="#0F336F"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Button: Education -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_education"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:textSize="14sp"
                    android:textColor="#0F336F"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Button: Chat -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_chat"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1.5"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:textSize="14sp"
                    android:textColor="#0F336F"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Button: Notifications -->
        <androidx.cardview.widget.CardView
            android:id="@+id/btn_notifications"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1.5"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="#FFFFFF"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textSize="14sp"
                    android:textColor="#0F336F"
                    android:textStyle="bold"
                    android:layout_gravity="center" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </GridLayout>
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/home_bottom_menu"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:background="#0F336F"
                android:gravity="center">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:src="@drawable/group_bottom"
                    android:padding="8dp"
                    android:contentDescription="@string/bottom_home_group"/>


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </GridLayout>
</LinearLayout>
